# federiq

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
db/: mongo_data.json  mysql.sql  postgres.sql
init-scripts/: init.sql  mongo-init.sh
init-scripts/mysql/: init.sql
src/: api.rs  main.rs
src/ai_orchestration/: Cargo.toml
src/data_mesh/: Cargo.toml
src/federated_query_engine/: Cargo.toml  main.rs
src/federated_query_engine/src/: api.rs  connectors.rs  lib.rs  metrics.rs  query_executor.rs  query_optimizer.rs  tests.rs
src/hybrid_data_fabric/: Cargo.toml
