[package]
name = "federated_query_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.3", features = [
    "mysql",
    "postgres",
    "runtime-tokio-native-tls",
] }
mongodb = "3.1.1"
futures-util = "0.3"
lazy_static = "1.4"
prometheus = "0.13.4"
dotenv = "0.15"
axum = { version = "0.8.1", features = ["json", "macros"] } # Added macros feature
hyper = { version = "1.5.2", features = ["full"] }
deadpool-redis = { version = "0.18.0", features = ["rt_tokio_1"] }
serde = { version = "1.0", features = ["derive"] } # Added serde
serde_json = "1.0" # Added serde_json

[[bin]]
name = "federated_query_engine" # This is the binary name
path = "main.rs"                # Path to the main binary entry point
